# mosaico-test-datasets

./: .gitignore  ReadMe.md  pyproject.toml
Datasets/: cli.py  configs.py  delete_all_sequences.py  ros_datasets_injestor.py
Datasets/Autoware/: configs.py
Datasets/SugarBeets/: configs.py  download_ijrr_sugar_beet_2016_rosbag_data.sh
Datasets/SugarBeets/metadata/: bonirob_2016-04-20-15-37-25_0.json  bonirob_2016-04-21-15-01-58_0.json  bonirob_2016-04-22-10-26-02_0.json  bonirob_2016-04-25-17-16-29_0.json  bonirob_2016-04-26-12-46-01_0.json
Datasets/UZH_FPV/: ReadMe.md  configs.py  download_uzh_fpv.sh
Datasets/UZH_FPV/metadata/: indoor_45_11_davis.json  indoor_45_11_snapdragon.json  indoor_45_12_davis_with_gt.json  indoor_45_12_snapdragon_with_gt.json  indoor_45_13_davis_with_gt.json  indoor_45_13_snapdragon_with_gt.json  indoor_45_14_davis_with_gt.json  indoor_45_14_snapdragon_with_gt.json  indoor_45_16_davis.json  indoor_45_16_snapdragon.json  indoor_45_1_davis.json  indoor_45_1_snapdragon.json  indoor_45_2_davis_with_gt.json  indoor_45_2_snapdragon_with_gt.json  indoor_45_3_davis.json  indoor_45_3_snapdragon.json  indoor_45_4_davis_with_gt.json  indoor_45_4_snapdragon_with_gt.json  indoor_45_9_davis_with_gt.json  indoor_45_9_snapdragon_with_gt.json  indoor_forward_10_davis_with_gt.json  indoor_forward_10_snapdragon_with_gt.json  indoor_forward_11_davis.json  indoor_forward_11_snapdragon.json  indoor_forward_12_davis.json  indoor_forward_12_snapdragon.json  indoor_forward_3_davis_with_gt.json  indoor_forward_5_davis_with_gt.json  (+31 more)
Docker/: compose.mosaico.yml
